# agent-sched-bench

./: .env.example  .gitignore  .indexignore  AGENTS.md  CLAUDE.md  INTEGRATION_ROADMAP.md  Makefile  OPERATIONS.md  README.md  pyproject.toml
configs/: README.md  sweep.yaml
configs/benchmarks/: bfcl-v4.yaml  browsecomp.yaml  deep-research-bench.yaml  swe-bench-verified.yaml  swe-rebench.yaml  terminal-bench.yaml  terminal_bench_registry.json
configs/kv_policies/: h2o_b1024.yaml  h2o_b3840_m256.yaml  h2o_b4096.yaml  metadata_rung1_b1024.yaml  metadata_rung2_b1024.yaml  metadata_rung3_b1024.yaml  metadata_rung4_b1024.yaml  metadata_rung4_b4096.yaml  null_eviction_probe.yaml  position_control_middle_b1024.yaml  position_control_random_b1024.yaml  position_control_structured_b1024.yaml  random_b1024.yaml  random_b3840_m256.yaml  streaming_b1024.yaml  streaming_b3840_m256.yaml  streaming_b4096.yaml  streaming_b4096_protect_tools.yaml
configs/mcp/: context7.yaml
configs/recording_campaigns/: README.md  agent_event_kv_step_level.yaml
configs/simulate/: README.md  openclaw-glm-10-manifest.json  openclaw-glm-19-manifest.json  openclaw-glm-20-closedloop-manifest.json
configs/sparse_attention/: block_topk_b1024.yaml  block_topk_b1024_perhead_max.yaml  block_topk_b1024_perhead_vote.yaml  heavy_hitter_b1024.yaml  metadata_observe_b1024.yaml  quest_b1024.yaml
configs/sweeps/: default.yaml
configs/systems/: continuum.yaml  thunderagent.yaml  vllm_baseline.yaml  vllm_low_preempt.yaml  vllm_no_preempt.yaml  vllm_preserve.yaml
configs/trace_collect/: README.md  simulate.yaml  swebench.yaml
configs/workloads/: code_agent.yaml  code_agent_smoke.yaml  data_agent.yaml  data_agent_smoke.yaml  research_agent.yaml  research_agent_smoke.yaml
containers/: Containerfile.base
data/: README.md
data/bird_sql/: smoke.db  tasks.json
data/research_queries/: tasks.json
data/swe-rebench/: tasks.json
data/swebench_lite/: tasks.json
data/swebench_verified/: tasks.json
demo/: __init__.py
demo/gantt_viewer/: AGENT_INTERFACE.md  CLAUDE.md  README.md  __init__.py  register_swe_rebench_demo.py
docs/: CLOUD_CODEX_HANDOFF_20260409.md  CURRENT_PLAN.md  EXPERIMENT_PLAN.md  FIX_PLAN.md  GANTT_EXPORT_PLAN.md  NEXT_STEPS_PLAN.md  PLAN_REMOVE_LITELLM.md  REVIEW_2026-04-01.md  TRACE_TOOL_ANALYSIS_PLAN.md  agent_benchmark_spec.md  benchmark_plugin_spec.md  vastai_setup.md
docs/plans/: 2026-03-31-agent-sched-bench-design.md  phase0-schemas.md  phase1.5-design.md  trace-sim-vastai-pipeline.md
docs/reviews/: AGENT-1.md  AGENT-2.md  AGENT-3.md  AGENT-4.md  ANALYSIS-1.md  BOOTSTRAP-0.md  ENV-1.md  ENV-2.md  ENV-3a.md  ENV-3b.md  ENV-3c.md  ENV-4.md  ENV-5.md  HARNESS-1.md  HARNESS-2.md  HARNESS-3.md  IMPLEMENTATION_REVIEW.md  REPLAY-1.md  STEP-BUDGET-UPDATE.md  bfcl-v4-plugin-review.md  bfcl-v4-plugin-v2-review.md  swe-rebench-plugin-review.md
results/: README.md
scripts/: analyze_trace_resources.py  analyze_trace_tool_calls.py  build_swebench_images.sh  check_refs.sh  collect_results.sh  download_model.sh  example_gpu_tracking.sh  full_setup.sh  launch_kv_capstone.sh  load_recording.py  migrate_trace_format.py  migrate_traces_to_attempt_layout.py  plot_activations.py  plot_attention_fullseq_downsample.py  plot_gpu_mem.py  plot_gpu_mem_v2.py  plot_moe_experts.py  probe_activations.py  probe_attention_fullseq_downsample.py  probe_attention_maps.py  probe_moe_experts.py  pull_repo.sh  report_model_artifact.py  report_server_env.py  run_concurrency_sweep.sh  run_nanobot_eval.py  run_smoke.sh  run_sweep.sh  serve_continuum.sh  serve_thunderagent.sh  serve_vllm.sh  setup_server.sh  setup_swebench_repos.sh  smoke_checkpoint_forced_sync.py  smoke_full_matrix.sh  smoke_gantt_viewer.sh  smoke_tongyi_deepresearch.py  trace_timeline.py
scripts/campaign/: README.md  recompress_run.py  run_campaign.sh  tasks.example.tsv  tasks.remaining.tsv  upload_run.py
scripts/figures/: _real_trace_metrics.py  plot_execution_profile.py  plot_execution_profile_real.py  plot_resource_phase_alignment.py  plot_tool_ratio_progress.py  plot_tool_ratio_progress_real.py
scripts/modal_workspace/: agent_attention_a1_a5_posthoc.py  (+11 more)
tests/: integration_research_agent_live.py  test_agent_attention_modal_followup.py  test_agent_basic.py  test_analysis.py  test_attempt_layout.py  test_attempt_pipeline.py  test_attention_bus.py  test_attention_probe_segments.py  test_benchmark_local_task_cache.py  test_benchmark_protocol.py  test_benchmark_registry.py  test_bfcl_runner.py  test_bfcl_tools.py  test_bfcl_v4_plugin.py  test_block_seg_decompose.py  test_block_topk_vote_e2e.py  test_bootstrap.py  test_browsecomp_plugin.py  test_campaign_runner.sh  test_capabilities.py  test_claude_code_import.py  test_cli_benchmark_flag.py  test_cli_gantt_empty.py  test_cli_mcp_flag_enforcement.py  test_code_agent.py  test_collect_traces_kwarg_passthrough.py  test_collector_openclaw_metadata.py  test_collector_prompt_resolution.py  test_collector_resume.py  test_collector_runtime_mode.py  test_collector_task_container_runtime.py  test_component_memory_profiler.py  test_container_manager.py  test_container_utils.py  test_data_agent.py  test_deep_research_bench_plugin.py  test_detokenize_selected_blocks.py  test_engine_launcher_capture.py  test_env1.py  test_env2.py  (+136 more)
(+336 files in other folders)
