[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sched-bench"
version = "0.1.0"
description = "Benchmark environment for agent scheduling research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "hydra-core>=1.3,<2.0",
  "httpx>=0.27,<1.0",
  "openai>=2.0,<3.0",
  "mini-swe-agent>=2.0",
  "pandas>=2.2,<3.0",
  "PyYAML>=6.0,<7.0",
  "trafilatura>=2.0,<3.0",
  "matplotlib>=3.8,<4.0",
  "tqdm>=4.66,<5.0",
  "datasets>=3.0,<4.0",
  "loguru>=0.7,<1.0",
  "pydantic>=2.0,<3.0",
  "json-repair>=0.30,<1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.26,<1.0",
  "ruff>=0.11,<1.0",
]
gantt-viewer = [
  "fastapi>=0.115,<0.120",
  "uvicorn[standard]>=0.30,<0.40",
  "python-multipart>=0.0.9,<0.1",
  "anyio>=4.0,<5.0",
]
# Optional HTML-parsing deps retained for ad-hoc trace inspection tools.
gantt-test = [
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.scripts]
openclaw = "agents.openclaw._cli:main"

[tool.setuptools]
package-dir = {"" = "src", "demo" = "demo"}

[tool.setuptools.packages.find]
where = ["src", "."]
include = [
  "trace_collect*",
  "agents*",
  "analysis*",
  "serving*",
  "harness*",
  "demo*",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests", "demo/gantt_viewer/tests"]
markers = [
  "slow: marks tests that hit real on-disk fixtures and may be skipped in fast CI runs",
]

[tool.ruff]
line-length = 88
target-version = "py311"
